syntax = "proto3";

package ai.metathings.service.identityd2;

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message GetGroupRequest {
	OpGroup group = 1 [(validator.field) = {msg_exists: true}];
}

message GetGroupResponse {
	Group group = 1;
}
